--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="app">
+<html lang="en" ng-app="MyApp">
   <head>
 
     <title>PhotoSearch</title>
@@ -8,20 +8,28 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <script data-require="angular.js@1.3.10" data-semver="1.3.10" src="https://code.angularjs.org/1.3.10/angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js" type="text/javascript"></script>
     <script src="app.js"></script>
   </head>
   <body ng-controller="MyController">
 
       <div class="container topsection text-center">
-
+       
         <h1>PhotoSearch</h1>
 
         <p class="lead">Search Instagram for the greatest photos ever.</p>
         <form name="searchForm" ng-submit="searchInstagram(keyword)">
-            <input name="keyword" type="text" placeholder="Enter a tag to search"/>
+            <input name="keyword" type="text" placeholder="Enter a tag to search" ng-model="keyword"/>
             <input type="submit" value="Submit" class="btn btn-default sButton" required="">
         </form>
+      </div>
+
+      <div class="container bottomsection">
+        <div class="row">
+          <div class="col-md-4"><img src="{{ results }}"></div>
+          <div class="col-md-4"><img src="{{ results }}"></div>
+          <div class="col-md-4"><img src="{{ results }}"></div>
+        </div>
       </div>
 
     <script src="http://code.jquery.com/jquery.js"></script>
