--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular-animate.js" type="text/javascript"></script>
+
     <script src="app.js"></script>
   </head>
   <body ng-controller="MyController">
@@ -19,14 +21,24 @@
 
         <p class="lead">Search Instagram for the greatest photos ever.</p>
         <form name="searchForm" ng-submit="searchInstagram(keyword)">
-            <input name="keyword" type="text" placeholder="Enter a tag to search" ng-model="keyword"/>
+            <input name="keyword" type="text" placeholder="Enter a tag to search" ng-model="keyword" required/>
             <input type="submit" value="Submit" class="btn btn-default sButton" required="">
         </form>
       </div>
 
+      <div class="container loadingbar text-center" id="iload" ng-show="loading">
+        <span ng-cloak>Loading!</span>  
+      </div>
+
+      <div class="container loadingbar text-center" id="iloadInv" ng-show="!loading"><span>Loading!</span> </div>
+
+      <div class="container loadingbar" ng-show="error" ng-cloak>
+      {{ errorMsg }}
+      </div>
+
       <div class="container bottomsection">
         <div class="row">
-          <div class="col-md-4 col-sm-6 text-center" ng-repeat="result in results"><a href="{{ result.link }}"><img src="{{ result.images.standard_resolution.url }}"></a></div>
+          <div class="col-md-4 col-sm-6 text-center" ng-repeat="result in results" ng-cloak><a href="{{ result.link }}"><img ng-show="complete" ng-src="{{ result.images.standard_resolution.url }}"></a></div>
         </div>
       </div>
 
